--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <style>
     * { margin:0; padding:0; }
     html, body { width:100%; height:100%; background: black; }
-    canvas { widht: 600px; display:block; background: black; margin: 0 auto; }
+    canvas { width: 600px; display:block; background: black; margin: 0 auto; }
   </style>
 <script type="module" crossorigin src="./index-0n8wkmmv.js"></script></head>
 
 <body>
-	<canvas width="100%" height="100%" id='cnvs'></canvas>
+	<canvas id='cnvs'></canvas>
 	
 </body>
 </html>
