--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     * { margin:0; padding:0; }
     html, body { width:100%; height:100%; background: black; }
-    canvas { width: 600px; display:block; background: black; margin: 0 auto; }
+    canvas { width: 600px; height: 590px; display:block; background: black; margin: 0 auto; }
   </style>
 </head>
 
