--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <style>
     * { margin:0; padding:0; }
     html, body { width:100%; height:100%; background: black; }
-    canvas { width: 600px; display:block; background: black; margin: 0 auto; }
+    canvas { width: 600px; height: 590px; display:block; background: black; margin: 0 auto; }
   </style>
-<script type="module" crossorigin src="./index-0n8wkmmv.js"></script></head>
+<script type="module" crossorigin src="./index-tfeg90r7.js"></script></head>
 
 <body>
 	<canvas id='cnvs'></canvas>
